--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server & webpack --watch",
-    "test": "jest --watch --noStackTrace"
+    "test": "jest --watch --noStackTrace",
+    "knex": "knex"
   },
   "babel": {
     "presets": [
@@ -34,6 +35,8 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "knex": "^0.14.6",
+    "sqlite3": "^4.0.1"
   }
 }
