--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.16.2",
     "knex": "^0.14.6",
     "nodemon": "^1.17.5",
+    "react-router": "^4.3.1",
     "sqlite3": "^4.0.1",
     "superagent": "^3.8.3"
   }
